<resources>
    <string name="app_name">ProjectMM</string>

    <string name="text_menuButton_QRCode">QR Code</string>
    <string name="text_menuButton_ListFilms">Liste</string>
    <string name="text_menuButton_SearchFilms">Recherche</string>
    <string name="text_menuButton_FavFilms">Favoris</string>
    <string name="text_menuButton_Profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_movie_or_tv_show">Search movie or TV show</string>
    <string name="text_menuButton_Home">Accueil</string>
    <string name="enter_profile_Id_textview">IDENTIFIANT</string>
    <string name="enter_profile_Passwd_textview">MOT DE PASSE</string>
    <string name="recommended_movies">Recommended movies :</string>
    <string name="similar_movies">Similar movies :</string>

</resources>